[package]
name = "disk-warn"
version = "0.1.0"
authors = ["Christian Duvholt <christian@duvholt.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features=["derive"] }
serde_json = "1.0.41"
reqwest = { version = "0.10.0-alpha.1", features=["blocking"] }
systemstat = "0.1.5"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
