[package]
name = "disk-warn"
version = "0.1.0"
authors = ["Christian Duvholt <christian@duvholt.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features=["derive"] }
serde_json = "1.0.62"
reqwest = { version = "0.11.0", features=["blocking"] }
systemstat = "0.1.7"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"

# Temp fix for https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"
